# introhs

./: .gitignore  .hgignore  Makefile-aux.mk  README.rst  exclude.lst  stack.yaml  vcs_bkup.sh
_templates/mustache/: render_mustache.groovy  render_mustache.py  render_mustache.rb  usage.txt
_templates/mustache/skeleton-hs/: data.json  data.toml  data.yaml
_templates/mustache/skeleton-hs/{{name}}/: .hgignore  {{name}}.cabal
_templates/mustache/skeleton-hs/{{name}}/choices/: post_gen_project.groovy.mustache  post_gen_project.py.mustache  post_gen_project.rb.mustache  post_gen_project.sh.mustache  post_render.groovy.mustache  post_render.py.mustache  post_render.rb.mustache
_templates/mustache/skeleton-hs/{{name}}/choices/_parent_build_tool/cabal/: Makefile.mustache  stack.yaml.bak
_templates/mustache/skeleton-hs/{{name}}/choices/_parent_build_tool/make/: Makefile.mustache
_templates/mustache/skeleton-hs/{{name}}/choices/_parent_build_tool/stack/: Makefile-aux.mk.mustache  stack.yaml
_templates/mustache/skeleton-hs/{{name}}/choices/_parent_init/: .hgignore  exclude.lst  vcs_bkup.sh
_templates/mustache/skeleton-hs/{{name}}/choices/_parent_readme/: README.adoc.mustache  README.md.mustache  README.rst.mustache
_templates/mustache/skeleton-hs/{{name}}/choices/build_tool/cabal/: Makefile-aux.mk
_templates/mustache/skeleton-hs/{{name}}/choices/build_tool/make/: Makefile-auxffi.mk  Makefile-targets.mk  Makefile.mustache  Makefile.new.mustache  configure.sh
_templates/mustache/skeleton-hs/{{name}}/choices/ffi_lib/foreign/: Classic.hs.mustache
_templates/mustache/skeleton-hs/{{name}}/choices/ffi_lib/swig/: classic_c.i.mustache
_templates/mustache/skeleton-hs/{{name}}/choices/license/: LICENSE_GPL-3.0+.mustache
_templates/mustache/skeleton-hs/{{name}}/choices/readme/: README.adoc.mustache  README.md.mustache  README.rst.mustache
_templates/mustache/skeleton-hs/{{name}}/choices/testfrwk/hspec/tests/: ClassicCase.hs.mustache  ClassicProp.hs.mustache  NewCase.hs.mustache  NewProp.hs.mustache  Spec.hs.mustache
_templates/mustache/skeleton-hs/{{name}}/choices/testfrwk/tasty/tests/: ClassicCase.hs.mustache  ClassicProp.hs.mustache  Main.hs.mustache  NewCase.hs.mustache  NewProp.hs.mustache
_templates/mustache/skeleton-hs/{{name}}/choices/testfrwk/test-framework/tests/: ClassicCase.hs.mustache  ClassicProp.hs.mustache  Main.hs.mustache  NewCase.hs.mustache
_templates/mustache/skeleton-hs/{{name}}/src/{{category}}/{{parentcap}}/: Main.hs.mustache  Person.hs.mustache  {{projectcap}}.hs.mustache
api/: Makefile-aux.mk  README.rst  introhs-practice.cabal  stack.yaml.bak
api/src/Data/Introhs/Practice/: Classic.hs  ClassicHiorder.hs  ClassicPuzzles.hs  ClassicStreams.hs  Sequenceops.hs  SequenceopsHiorder.hs
api/tests/: ClassicCase.hs  ClassicProp.hs  Main.hs  SequenceopsCase.hs  SequenceopsProp.hs
app/: .gitignore  README.rst  introhs-intro.cabal  stack.yaml  stack.yaml.bak
app/src/Data/Introhs/: Intro.hs  Main.hs
app/tests/: ClassicCase.hs  CollectionsCase.hs  CollectionsProp.hs  Main.hs  NewCase.hs  NewProp.hs
common/: .gitignore  .hgignore  README.rst  introhs-util.cabal  stack.yaml  stack.yaml.bak
common/src/Data/Introhs/: Person.hs  Util.hs
common/tests/: ClassicProp.hs  Main.hs  NewProp.hs
foreignc/: Makefile-aux.mk  README.rst  exclude.lst  introhs-foreignc.cabal  stack.yaml
foreignc/src/Data/Introhs/: Classic.hs
foreignc/tests/: ClassicCase.hs  ClassicProp.hs  Main.hs
