name:                introhs-practice
version:             0.1.0
synopsis:            Practice sub-package for Haskell Intro examples project.
description:         Please see README.rst
homepage:            https://bitbucket.org/thebridge0491/introhs#readme
license:             Apache-2.0
license-file:        LICENSE
author:              thebridge0491
maintainer:          thebridge0491-codelab@yahoo.com
copyright:           Copyright: (c) 2015 thebridge0491
category:            Data
build-type:          Simple
extra-source-files:  stack.yaml.bak,Makefile,*.mk,exclude.lst
                   , .editorconfig,.hgignore,.gitignore
data-files:          README.rst
                   , resources/*.txt,resources/*.conf,resources/*.json
                   , resources/*.yaml,resources/*.toml
extra-tmp-files:     prac.log,root.log
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://bitbucket.org/thebridge0491/introhs.git

flag debug
  description:         Enable debug support
  default:             False
flag dynamic
  description:         Build dynamically-linked
  default:             True

library
  hs-source-dirs:      src
  exposed-modules:     Data.Introhs.Practice.Classic
                     , Data.Introhs.Practice.Sequenceops
  other-modules:       Data.Introhs.Practice.ClassicPuzzles 
  ghc-options:         -Wall -fno-warn-type-defaults
  ld-options:          "-Wl,-rpath,$ORIGIN/"
  if flag(debug)
    ghc-options:       -g
    cc-options:        -DDEBUG -UNDEBUG -g3 --coverage
    ld-options:        --coverage
  else
    cc-options:        -DNDEBUG -UDEBUG
  build-depends:       base >= 4.7 && < 5,hslogger,mtl,vector,array
                     , containers
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings,FlexibleContexts

test-suite TsMain-introhs-practice
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Main.hs
  --main-is:             Spec.hs
  other-modules:       ClassicCase,ClassicProp,SequenceopsCase,SequenceopsProp
  ghc-options:         -Wall -fno-warn-type-defaults -threaded 
                       -fno-warn-missing-signatures -rtsopts -with-rtsopts=-N
  ld-options:          "-Wl,-rpath,$ORIGIN/"
  if flag(debug)
    ghc-options:       -g
    cc-options:        -DDEBUG -UNDEBUG -g3 --coverage
    ld-options:        --coverage
  else
    cc-options:        -DNDEBUG -UDEBUG
  if flag(dynamic)
    ghc-options:       -dynamic
  build-depends:       base,HUnit,QuickCheck,introhs-util,introhs-practice,mtl
                     , test-framework, test-framework-hunit,test-framework-quickcheck2
                     --, tasty, tasty-hunit,tasty-quickcheck
                     --, hspec, hspec-discover,hspec-expectations
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings,FlexibleContexts
