name:                introhs-intro
version:             0.1.0
synopsis:            Main app sub-package for Haskell Intro examples project.
description:         Please see README.rst
homepage:            https://bitbucket.org/thebridge0491/introhs#readme
license:             Apache-2.0
license-file:        LICENSE
author:              thebridge0491
maintainer:          thebridge0491-codelab@yahoo.com
copyright:           Copyright: (c) 2015 thebridge0491
category:            Data
build-type:          Simple
extra-source-files:  stack.yaml.bak,Makefile,*.mk,exclude.lst
                   , .editorconfig,.hgignore,.gitignore
data-files:          README.rst
                   , resources/*.txt,resources/*.conf,resources/*.json
                   , resources/*.yaml,resources/*.toml
extra-tmp-files:     prac.log,root.log
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://bitbucket.org/thebridge0491/introhs.git

flag debug
  description:         Enable debug support
  default:             False
flag dynamic
  description:         Build dynamically-linked
  default:             True

executable Main-introhs-intro
  hs-source-dirs:      src
  main-is:             Data/Introhs/Main.hs
  other-modules:       Data.Introhs.Person,Data.Introhs.Intro
  --other-modules:       Data.Introhs.Person,Data.Introhs.Intro,Data.Introhs.Classic
  ghc-options:         -Wall -fno-warn-type-defaults -threaded 
                       -fno-warn-missing-signatures -rtsopts -with-rtsopts=-N
  ld-options:          "-Wl,-rpath,$ORIGIN/"
  if flag(debug)
    ghc-options:       -g
    cc-options:        -DDEBUG -UNDEBUG -g3 --coverage
    ld-options:        --coverage
  else
    cc-options:        -DNDEBUG -UDEBUG
  if flag(dynamic)
    ghc-options:       -dynamic
  build-depends:       base >= 4.7 && < 5,hslogger,ConfigFile,regex-compat,mtl
                     , regex-posix,text,bytestring,unordered-containers
                     , random,aeson,json,yaml
  --extra-lib-dirs:      .
  --extra-libraries:     :libintro_c-practice.a
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings,FlexibleContexts

test-suite TsMain-introhs-intro
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Main.hs
  --main-is:             Spec.hs
  other-modules:       NewCase,NewProp
  --other-modules:       NewCase,NewProp,ClassicCase,ClassicProp
  ghc-options:         -Wall -fno-warn-type-defaults -threaded 
                       -fno-warn-missing-signatures -rtsopts -with-rtsopts=-N
  ld-options:          "-Wl,-rpath,$ORIGIN/"
  if flag(debug)
    ghc-options:       -g
    cc-options:        -DDEBUG -UNDEBUG -g3 --coverage
    ld-options:        --coverage
  else
    cc-options:        -DNDEBUG -UDEBUG
  if flag(dynamic)
    ghc-options:       -dynamic
  build-depends:       base,HUnit,QuickCheck
                     , test-framework, test-framework-hunit,test-framework-quickcheck2
                     --, tasty, tasty-hunit,tasty-quickcheck
                     --, hspec, hspec-discover,hspec-expectations
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings,FlexibleContexts
